tests/syntax/good/128_object_use.grace
def x = object {
    method foo { 1 }
}

object {
    use x
}
