tests/syntax/bad/120_object_noindent.grace
object {
def x = 1
}
